[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["zuisong <378818573@qq.com>"]
edition = "2018"

[dependencies]
log= "0.4.11"
chrono = "0.4.19"
lazy_static = "1.4.0"
rand = "0.8.1"
simple_logger = "1.11.0"
anyhow = "1.0.37"
serde_json = "1.0.61"

[dev-dependencies]
base64 = "0.13.0"
test-case = "1.0.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
