[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["zuisong <378818573@qq.com>"]
edition = "2021"

[dependencies]
log= "0.4.17"
lazy_static = "1.4.0"
rand = "0.8.5"
anyhow = "1.0.71"
serde_json = "1.0.96"
env_logger = "0.10.0"

[dev-dependencies]
base64 = "0.21.0"
test-case = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
